--- a/app/src/main/res/layout/fragment_play_custom_game.xml
+++ b/app/src/main/res/layout/fragment_play_custom_game.xml
@@ -11,11 +11,14 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/lbl_diceTitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="play custom"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            android:text="S.K.A.T.E Dice"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -24,10 +27,118 @@
             android:id="@+id/txt_TEST"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
             android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_make"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="64dp"
+            android:layout_marginBottom="32dp"
+            android:text="{{TICK}}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btn_fail"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
+            android:layout_marginBottom="32dp"
+            android:text="{{CROSS}}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/lbl_S"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="16dp"
+            android:text="S"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_K"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle2" />
+
+        <TextView
+            android:id="@+id/lbl_K"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="16dp"
+            android:text="K"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_A"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle2" />
+
+        <TextView
+            android:id="@+id/lbl_A"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:text="A"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle2" />
+
+        <TextView
+            android:id="@+id/lbl_T"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="80dp"
+            android:text="T"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@+id/lbl_A"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle2" />
+
+        <TextView
+            android:id="@+id/lbl_E"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="80dp"
+            android:text="E"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@+id/lbl_T"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle2" />
+
+        <TextView
+            android:id="@+id/txt_nextTrick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_A" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
