--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -30,6 +30,7 @@
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="32dp"
             android:text="{{TICK}}"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -40,6 +41,7 @@
             android:layout_marginStart="64dp"
             android:layout_marginBottom="32dp"
             android:text="{{CROSS}}"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
