--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -2,9 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:drawable="@color/white"/>
+        android:drawable="@color/purple_500"
+        android:color="@color/white"/>
 
     <item
         android:state_selected="false"
-        android:drawable="@color/black"/>
+        android:color="@color/black"/>
 </selector>
