--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="S.K.A.T.E"
+        android:id="@+id/Dice"
         android:icon="@drawable/ic_dice"
-        android:id="@+id/Dice"/>
+        android:title="S.K.A.T.E" />
     <item
-        android:title="Map"
+        android:id="@+id/Map"
         android:icon="@drawable/ic_map"
-        android:id="@+id/Map"/>
+        android:title="Map" />
     <item
-        android:title="Profile"
+        android:id="@+id/Profile"
         android:icon="@drawable/ic_profile"
-        android:id="@+id/Profile"/>
+        android:title="Profile" />
+    <item
+        android:id="@+id/Tutorial"
+        android:icon="@drawable/ic_tutorial"
+        android:title="Tutorial" />
 </menu>
