--- a/app/src/main/assets/userguide/css/utils.css
+++ b/app/src/main/assets/userguide/css/utils.css
@@ -52,14 +52,8 @@ ul.topnav li.right {
 	margin: 0 20%;
 }
 
-footer {
-    margin: 70px 0 0 0;
-    background-color: var(--l-blue);
-}
-
-footer p {
-    margin-block-end: 0;
-    text-align: center;
+.bottom-spacer {
+    margin-top: 150px;
 }
 
 @media screen and (max-width: 762px) {
@@ -111,6 +105,6 @@ footer p {
 	width: 60%;
 }
 
-.page-title {
+.center-text {
 	text-align: center;
 }
